compiler/tests/fail/stack_allocation/x86-64/no_region_reg_ptr.jazz
export
fn g () -> reg u64 {
  reg ptr u64[1] r;
  reg u64 res;

  r[0] = 0;
  res = r[0];

  return res;
}
